# roo

./: .gitignore  Cargo.toml  backlog.md  rhai_feedback.md  roadmap.md
database/: roo.current.ron
integration_tests/: conftest.py  lib.py  pyproject.toml  test_core.py  test_general_functions.py  test_general_operations.py  test_language_features.py  test_misc.py  test_moo.py  test_number_operations.py  test_object_operations.py  test_object_properties.py  test_sanity.py  test_string_operations.py
integration_tests/tests/: test_core.py  test_moo.py  test_sanity.py
src/: api.rs  command.rs  database.rs  error.rs  main.rs  result.rs  saveload.rs  server.rs  task_context.rs
src/database/: database.rs  database_proxy.rs  mod.rs  object.rs  property.rs  verb.rs  world.rs
src/lua/: ObjectProxy.lua  api.lua  core.lua  init.lua  moo.lua  proxies.lua  result.lua  spawn_player.lua  webclient.lua
src/lua/core/S.Player/: @edit.lua  @program.lua  my_match_object.lua
src/lua/core/S.Room/: announce.lua  announce_all.lua  describe.lua  emote.lua  look.lua  say.lua
src/lua/core/S.Root/: get_name.lua  match.lua  tell.lua  title.lua
src/lua/core/S.code_utils/: find_verb_named.lua  full_prep.lua  parse_argspec.lua  parse_verbref.lua  short_prep.lua  toobj.lua  verbname_match.lua
src/lua/core/S.command_utils/: dump_lines.lua  object_match_failed.lua
src/lua/core/S.object_utils/: has_verb.lua
src/lua/core/S.string_utils/: from_list.lua  literal_object.lua  match.lua  match_object.lua  words.lua
src/lua/core/S.verb_editor/: get_room.lua
src/lua/core/S.webclient/: fetch_verb_code.lua  invoke.lua  invoke_local_editor.lua  local_editing_info.lua  local_instruction.lua  parse_invoke.lua
src/lua/core/system/: do_login_command.lua
src/lua/tests/: scratchpad.lua  test_ObjectProxy.lua
