[package]
name = "roo"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
async-channel = "1.6.1"
parking_lot = "0.11.2"
rand = "0.8.4"
rhai = {version="1.0.3", features=["sync", "no_module"]}
sha2 = "0.9.6"
strum = "0.21.0"
strum_macros = "0.21.1"
tokio = {version="1.11.0", features=["full"]}
