[tool.poetry]
name = "roo_integration_tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pylint = "^2.10.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
